--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@ function validate()
 	var un = document.login.username.value;
 	var pw = document.login.password.value;
 	var valid = false;
-	var usernameArray = ["Admin", "GlobalAdmin"];
-	var passwordArray = ["Admin123", "GlobalAdmin123"];
+	var usernameArray = ["Admin", "GlobalAdmin", "James"];
+	var passwordArray = ["Admin123", "GlobalAdmin123", "James123"];
 	for (var i = 0; i < usernameArray.length; i++)
  {
 
