--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@ function validate()
 }
 	if (valid)
 	{
-		window.location = "https://cyberconnectit.github.io/ticket-system.cyberconnectit.com/";
+		window.location = "https://cyberconnectit.github.io/self-service.cyberconnectit.com/";
 		return false;
 	}
 	var again = " tries";
