--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Cyber Connect IT Members Area</title>
+	 <title>Users Login Area | Cyber Connect IT</title>
 	<link rel="stylesheet" type="text/css" href="css/login.css">
 </head>
 <body>
